--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -189,7 +189,7 @@ serial_comps =
 
     # Only one, but for generality return an array
     sink_plugin = thapi_plugins.filter_map do |plugin|
-      plugin.get_sink_component_class_by_name(command) if plugin.name == 'timeline'
+      plugin.get_sink_component_class_by_name('btx_timeline') if plugin.name == 'btx_timeline'
     end.first
 
     comp_timeline = graph.add_component(sink_plugin, 'timeline')
