--- a/ze/tracer_ze.sh.in
+++ b/ze/tracer_ze.sh.in
@@ -113,6 +113,7 @@ then
   export LTTNG_UST_SAMPLING=1
   lttng enable-channel --userspace nonblocking-channel
   lttng enable-event --channel=nonblocking-channel --userspace lttng_ust_sampling:*
+  lttng enable-event --channel=nonblocking-channel --userspace lttng_ust_ze_sampling:*
 fi
 if [ -z "$LTTNG_UST_ZE_LIBZE_LOADER" ]
 then
