--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -21,8 +21,7 @@ xprof_utils.hpp: $(top_srcdir)/utils/xprof_utils.hpp
 	$(PROTOC) -I=$(srcdir) --cpp_out=$(builddir) $<
 
 btx_tally_upstream_model.yaml btx_timeline_upstream_model.yaml: btx_interval_model.yaml
-	cp $< btx_timeline_upstream_model.yaml 
-	cp $< btx_tally_upstream_model.yaml 
+	cp $< $@
 
 %/metababel/metababel.h %/metababel/btx_component.h %/metababel/btx_component.c %/metababel/btx_upstream.h %/metababel/btx_upstream.c %/btx_main.c: %_upstream_model.yaml %_params.yaml
 	$(METABABEL) -u $(builddir)/$*_upstream_model.yaml -t SINK -o $* -p $* -c $* --params $(srcdir)/$*_params.yaml
@@ -122,12 +121,11 @@ data_DATA = \
 EXTRA_DIST = \
 	interval.c.erb \
 	interval.h.erb \
-	interval_model.yaml \
 	btx_interval_model.yaml \
-	btx_timeline_upstream_model.yaml 
-	btx_timeline_params.yaml \
-	btx_tally_params.yaml \
+	interval_model.yaml \
 	btx_timeline_upstream_model.yaml \
+	btx_tally_upstream_model.yaml \
+	btx_tally_params.yaml \
 	$(TRACE_FILES) \
 	tests/tally.dust.erb \
 	perfetto_prunned.proto
