--- a/xprof/btx_tally_params.yaml
+++ b/xprof/btx_tally_params.yaml
@@ -2,6 +2,7 @@
 :entries:
   - :name: display_compact
     :type: bool
+    :default_value: BT_TRUE
   - :name: demangle_name
     :type: bool
   - :name: display_human
