Add WIP ze_validator.

--- a/ze/Makefile.am
+++ b/ze/Makefile.am
@@ -155,7 +155,8 @@ CLEANFILES += zeprof.sh
 
 bin_SCRIPTS = \
 	tracer_ze.sh \
-	zeprof.sh
+	zeprof.sh \
+	ze_validator
 
 noinst_LTLIBRARIES = libzetracepoints.la
 
